--- a/DataDictionaryCreator/DataDictionaryCreator.csproj
+++ b/DataDictionaryCreator/DataDictionaryCreator.csproj
@@ -31,6 +31,7 @@
     <Install>true</Install>
     <InstallFrom>Web</InstallFrom>
     <UpdateEnabled>false</UpdateEnabled>
+    <UpdateEnabled>false</UpdateEnabled>
     <UpdateMode>Foreground</UpdateMode>
     <UpdateInterval>7</UpdateInterval>
     <UpdateIntervalUnits>Days</UpdateIntervalUnits>
